# whatsapp-extractor

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md
docs/adr/: 0001-vendor-knugihk-engine-tui-on-top.md
src/Whatsapp_Chat_Exporter/: VENDORED.txt  data_model.py  whatsapp.html
src/whatsapp_extractor/: __init__.py  backup.py  cli.py  export.py  extract.py  link_previews.py  reactions.py  service.py  stats.py  system_messages.py  tui.py  workdir.py
