[project]
name = "whatsapp-extractor"
version = "0.1.0"
description = "TUI to select WhatsApp chats from an iPhone backup by their stats and export the selected chats — with reactions — to HTML/JSON."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "barknktc" }]
dependencies = [
    # TUI
    "textual>=0.60",
    # vendored engine (KnugiHK/WhatsApp-Chat-Exporter) runtime deps
    "jinja2",
    "bleach",
    "tqdm",
    # iOS backup decryption (encrypted backups)
    "iphone_backup_decrypt",
    "pycryptodome",
]

[project.scripts]
whatsapp-extractor = "whatsapp_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# ship our package and the vendored engine (top-level so its absolute imports work)
packages = ["src/whatsapp_extractor", "src/Whatsapp_Chat_Exporter"]

[tool.hatch.build.targets.wheel.force-include]
# templates the engine renders from
"src/Whatsapp_Chat_Exporter/whatsapp.html" = "Whatsapp_Chat_Exporter/whatsapp.html"
"src/Whatsapp_Chat_Exporter/whatsapp_old.html" = "Whatsapp_Chat_Exporter/whatsapp_old.html"

[tool.uv]
package = true
